tests/integration_rust/snapshots/integration_rust__project_tests__parse_project-3.snap
---
source: tests/integration_rust/project_tests.rs
expression: "dependency_names(&project, Platform::Win64)"
---
[
    "all",
    "win",
    "all_win",
]
